# MIDI-gen

./: .gitignore  DESIGN_CONCEPT.md  HANDOFF_FROM_JULES.md
.bmad-core/: install-manifest.yaml
.crush/: crush.db-shm  crush.db-wal
juce_port/: AGENTS.md  HANDOFF_TO_CODER_AGENT.md  NEXT_STEPS.md  QUICK_START.md  README.md  VS2022_SETUP.md
juce_port/build_scripts/: README.md  build_only.ps1  fix_vst3_error.ps1  force_rebuild.ps1  full_test_cycle.ps1  manual_test.ps1  run_headless_tests.ps1  run_tests.ps1  run_tests.sh  setup_cmake.ps1  test_build.ps1
juce_port/docs/: BUILD_SYSTEMS.md  HANDOFF.md  development_setup.md  generator_implementation_plan.md  porting_handoff.md
juce_port/juce_project/: .gitignore  CMakeLists.txt  COMPILATION_GUIDE.md  CreativeMIDIGenerator.jucer  GETTING_STARTED.md  README.md
juce_port/juce_project/Builds/VisualStudio2022/: resources.rc
juce_port/juce_project/Builds/VisualStudio2022/x64/Release/Shared Code/: Creative MIDI Generator_SharedCode.vcxproj.FileListAbsolute.txt
juce_port/juce_project/Builds/VisualStudio2022/x64/Release/Shared Code/Creative.A0FA8AFF.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
juce_port/juce_project/Builds/VisualStudio2022/x64/Release/Standalone Plugin/: Creative MIDI Generator.exe.recipe  Creative MIDI Generator_StandalonePlugin.vcxproj.FileListAbsolute.txt
juce_port/juce_project/Builds/VisualStudio2022/x64/Release/Standalone Plugin/Creative.C7B4A476.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.write.1.tlog
juce_port/juce_project/Builds/VisualStudio2022/x64/Release/VST3 Manifest Helper/: Creative MIDI Generator_VST3ManifestHelper.vcxproj.FileListAbsolute.txt  juce_vst3_helper.exe.recipe  resources.res
juce_port/juce_project/Builds/VisualStudio2022/x64/Release/VST3 Manifest Helper/Creative.6010A736.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
juce_port/juce_project/Builds/VisualStudio2022/x64/Release/VST3/Creative.F340DF50.tlog/: Creative MIDI Generator_VST3.lastbuildstate
juce_port/juce_project/JuceLibraryCode/: AppConfig.h  JuceHeader.h  JucePluginDefines.h
juce_port/juce_project/Source/: LiveNote.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
juce_port/juce_project/Source/Generators/: BaseGenerator.cpp  BaseGenerator.h  DualEuclideanGenerator.cpp  DualEuclideanGenerator.h  Duration.cpp  Duration.h  EuclideanGenerator.cpp  EuclideanGenerator.h  GenerationParameters.h  Generator.h  PendingNoteOff.h  RandomGenerator.cpp  RandomGenerator.h  RandomGeneratorV2.cpp  RandomGeneratorV2.h
juce_port/juce_project/Source/Looper/: Looper.cpp  Looper.h
juce_port/juce_project/Source/Sequencer/: Sequencer.h
juce_port/juce_project/Source/Tests/: HeadlessTestRunner.cpp  HeadlessTester.cpp  HeadlessTester.h  TestLooperFeatures.h
juce_port/juce_project/Source/Theory/: Duration.cpp  Duration.h  Scales.cpp  Scales.h
juce_port/juce_project/Source/UI/: CustomLookAndFeel.h  DualEuclideanGeneratorPanel.cpp  DualEuclideanGeneratorPanel.h  EuclideanGeneratorPanel.cpp  EuclideanGeneratorPanel.h  GeneratorSectionComponent.cpp  GeneratorSectionComponent.h  LooperSectionComponent.cpp  LooperSectionComponent.h  RandomGeneratorPanel.cpp  RandomGeneratorPanel.h  RandomGeneratorV2Panel.cpp  RandomGeneratorV2Panel.h  TimelineComponent.cpp  TimelineComponent.h  ToolbarComponent.cpp  ToolbarComponent.h
stuff/: .coverage  .gitignore  AGENTS.md  README.md  config.json  main.py  requirements.txt  мелодия120.mid
stuff/.crush/: crush.db-shm  crush.db-wal
stuff/docs/: DEVELOPMENT.md  README.md  current-features.md  detailed-specifications.md  dual_euclidean_v2_spec.md  for_user.txt  generators.md  looper_implementation_roadmap.md  midi_looper.md  midi_looper_architecture.md  midi_looper_integration_plan.md  port2juce_guide.md  random_generator_v2_spec.md  roadmap-2025.md  technical-architecture.md  vision-strategy.md
stuff/presets/: 122212.json
stuff/src/engine/: __init__.py  sequencer.py
stuff/src/generators/: __init__.py  base.py  dual_euclidean_generator.py  euclidean_generator.py  random_generator.py  random_generator_v2.py
stuff/src/gui/: __init__.py  embedded_font.py  main_window.py
stuff/src/looper/: looper_module.py
stuff/src/midi/: __init__.py  midi_handler.py
stuff/src/theory/: __init__.py  duration.py  scales.py
stuff/tests/: conftest.py  test_core_logic.py  test_dual_euclidean_generator.py  test_environment.py  test_euclidean_generator.py  test_integration.py  test_looper_module.py  test_looper_variations.py  test_main_window.py  test_main_window_callbacks.py  test_midi_handler.py  test_random_generator.py  test_random_generator_v2.py  test_scales.py  test_sequencer.py  test_sequencer_looper_integration.py  test_synchronization.py
